--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@thirdweb-dev/chains": "^0.1.26",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
     "ethers": "^5",
+    "framer-motion": "^10.12.18",
+    "g": "^2.0.1",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "vercel": "^31.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
